--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -82,17 +82,17 @@
         "Don't worry, you aren't expected to do all these stretch goals! These are just ideas to consider and choose from.\n",
         "\n",
         "- [x] Add your own stretch goal(s) !\n",
-        "- [ ] Instead of `Ridge`, try `LinearRegression`. Depending on how many features you select, your errors will probably blow up! 💥\n",
+        "- [x] Instead of `Ridge`, try `LinearRegression`. Depending on how many features you select, your errors will probably blow up! 💥\n",
         "- [ ] Instead of `Ridge`, try [`RidgeCV`](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.RidgeCV.html).\n",
-        "- [ ] Learn more about feature selection:\n",
+        "- [x] Learn more about feature selection:\n",
         "    - [\"Permutation importance\"](https://www.kaggle.com/dansbecker/permutation-importance)\n",
         "    - [scikit-learn's User Guide for Feature Selection](https://scikit-learn.org/stable/modules/feature_selection.html)\n",
         "    - [mlxtend](http://rasbt.github.io/mlxtend/) library\n",
         "    - scikit-learn-contrib libraries: [boruta_py](https://github.com/scikit-learn-contrib/boruta_py) & [stability-selection](https://github.com/scikit-learn-contrib/stability-selection)\n",
         "    - [_Feature Engineering and Selection_](http://www.feat.engineering/) by Kuhn & Johnson.\n",
         "- [ ] Try [statsmodels](https://www.statsmodels.org/stable/index.html) if you’re interested in more inferential statistical approach to linear regression and feature selection, looking at p values and 95% confidence intervals for the coefficients.\n",
-        "- [ ] Read [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf), Chapters 1-3, for more math & theory, but in an accessible, readable way.\n",
-        "- [ ] Try [scikit-learn pipelines](https://scikit-learn.org/stable/modules/compose.html)."
+        "- [x] Read [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf), Chapters 1-3, for more math & theory, but in an accessible, readable way.\n",
+        "- [x] Try [scikit-learn pipelines](https://scikit-learn.org/stable/modules/compose.html)."
       ]
     },
     {
@@ -193,7 +193,7 @@
       "metadata": {
         "id": "u3w-Y-NLDtUE",
         "colab_type": "code",
-        "outputId": "2a335b5d-002f-4851-af45-de025bbef9ca",
+        "outputId": "1454b41e-cf0a-432b-e68b-f894af56a955",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 445
@@ -202,7 +202,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -388,7 +388,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -407,7 +407,7 @@
       "metadata": {
         "id": "Y72y9rASiQuu",
         "colab_type": "code",
-        "outputId": "9a0b8c26-f1bf-451e-bbb2-441f8334c362",
+        "outputId": "8831c366-5724-4caf-a403-3d4a5ddbcdeb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -416,7 +416,7 @@
       "source": [
         "df['EASE-MENT'].shape[0] - df['EASE-MENT'].isna().sum()"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -428,7 +428,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -539,7 +539,7 @@
       "metadata": {
         "id": "w8x8sS05c5Si",
         "colab_type": "code",
-        "outputId": "ff8fc2e0-eea8-4390-feb2-e78764e52d90",
+        "outputId": "d42ec940-c171-4f3f-887d-5f4ca9bcb505",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -551,7 +551,7 @@
         "print(housing_test.shape)\n",
         "print(target_test.shape)"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,7 +572,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### One Hot Cat Encoding"
+        "### One Hot \"Cat\" Encoding"
       ]
     },
     {
@@ -590,7 +590,7 @@
       "metadata": {
         "id": "WT8OAi8UnnNy",
         "colab_type": "code",
-        "outputId": "e5c7cfe7-4eaf-4efc-a819-ff726dac2643",
+        "outputId": "a3796e39-21f1-4688-cf60-24ab082fc9cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -599,7 +599,7 @@
       "source": [
         "housing_train.select_dtypes(exclude='number').describe().T"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -681,7 +681,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 12
         }
       ]
     },
@@ -690,7 +690,7 @@
       "metadata": {
         "id": "6o4JeemceHtN",
         "colab_type": "code",
-        "outputId": "85e38aa1-557c-44c5-c967-5ba0c07fa250",
+        "outputId": "f7235604-eadf-4392-9ddc-cd45bb7f0036",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 456
@@ -705,7 +705,7 @@
         "\n",
         "housing_train"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1762,7 +1762,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 13
         }
       ]
     },
@@ -1771,7 +1771,7 @@
       "metadata": {
         "id": "rbc06ivYC-wX",
         "colab_type": "code",
-        "outputId": "4832f259-88c2-4632-bfbd-df771c9fe34a",
+        "outputId": "dd7992af-a760-4637-8eed-e1ff2fbe8d66",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1780,7 +1780,7 @@
       "source": [
         "housing_train.shape"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1792,7 +1792,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 14
         }
       ]
     },
@@ -1834,10 +1834,10 @@
       "metadata": {
         "id": "qFNGefpJ5J7e",
         "colab_type": "code",
-        "outputId": "8df1332d-b463-4ad7-f249-d298c3422cb6",
+        "outputId": "1132741e-8c40-49d3-e8b7-f2c4a20004e0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 187
+          "height": 207
         }
       },
       "source": [
@@ -1845,7 +1845,7 @@
         "X_train_selected = selector.fit_transform(housing_train, target_train)\n",
         "X_test_selected = selector.transform(housing_test)"
       ],
-      "execution_count": 0,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1870,7 +1870,7 @@
       "metadata": {
         "id": "cRTJ560U5P92",
         "colab_type": "code",
-        "outputId": "d328ebce-ffdd-4739-ecb1-99c626a1c334",
+        "outputId": "6319b478-9632-4a83-ee8d-b342d405b651",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1879,7 +1879,7 @@
       "source": [
         "print(X_train_selected.shape)"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1895,7 +1895,7 @@
       "metadata": {
         "id": "5faSozCp5WL0",
         "colab_type": "code",
-        "outputId": "c25f3743-3a53-4d1e-bdb9-e66696c09333",
+        "outputId": "ee0a5231-d453-44cf-faaa-da4f6e3f74ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 442
@@ -1907,7 +1907,7 @@
         "selected_names = names[selected_mask]\n",
         "print('Selected Features:', *selected_names, sep='\\n')"
       ],
-      "execution_count": 0,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -1971,7 +1971,7 @@
       "metadata": {
         "id": "1BN893SUAF97",
         "colab_type": "code",
-        "outputId": "7b5ff9b5-929c-4ac9-94a6-88ab7b155bc3",
+        "outputId": "ace4fbe8-2099-4620-8814-57544474a0f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1986,7 +1986,7 @@
         "mae = mean_absolute_error(target_test, y_pred)\n",
         "print(f\"MAE: ${mae:,.2f}\")"
       ],
-      "execution_count": 0,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1998,17 +1998,60 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jwMK5z4-1jFx",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Pipeline"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "M6l8btIEBkm9",
+        "id": "9J50xT_I14PV",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "from sklearn.pipeline import make_pipeline\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.preprocessing import StandardScaler"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M6l8btIEBkm9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "33303c03-1478-47c3-f404-d18c985bff7b"
+      },
+      "source": [
+        "pipline = make_pipeline(\n",
+        "    ce.OrdinalEncoder(),\n",
+        "    StandardScaler(),\n",
+        "    RandomForestClassifier(n_jobs=-1, random_state=42)\n",
+        ")\n",
+        "pipline.fit(housing_train, target_train)\n",
+        "print(f\"Validation: {100*pipline.score(housing_test, target_test):.2f}%\")"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Validation: 0.62%\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
