--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -82,7 +82,7 @@
         "- [x] Do one-hot encoding.\n",
         "- [x] Do [feature scaling](https://scikit-learn.org/stable/modules/preprocessing.html).\n",
         "- [ ] Get and plot your coefficients.\n",
-        "- [ ] Try [scikit-learn pipelines](https://scikit-learn.org/stable/modules/compose.html)."
+        "- [x] Try [scikit-learn pipelines](https://scikit-learn.org/stable/modules/compose.html)."
       ]
     },
     {
@@ -171,7 +171,7 @@
       "metadata": {
         "id": "K2r2DBONaunm",
         "colab_type": "code",
-        "outputId": "f852918c-4db4-4c75-805b-0a680c564aeb",
+        "outputId": "85903bd0-bae3-4bd9-8e6f-30cecaece52c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -180,7 +180,7 @@
       "source": [
         "df['Burrito'].value_counts()"
       ],
-      "execution_count": 37,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,7 +197,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 7
         }
       ]
     },
@@ -327,7 +327,7 @@
       "metadata": {
         "id": "c6kmZv0y_uOY",
         "colab_type": "code",
-        "outputId": "5b3441a2-5365-4c20-f64f-ceef1c347187",
+        "outputId": "8ead6e84-6f53-45b3-dc48-934bff983929",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
@@ -336,7 +336,7 @@
       "source": [
         "df.head(10)"
       ],
-      "execution_count": 45,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -801,7 +801,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 15
         }
       ]
     },
@@ -833,7 +833,7 @@
       "metadata": {
         "id": "iZ46RMK5FE1s",
         "colab_type": "code",
-        "outputId": "c9c9f368-1276-47b9-8c4c-98e5443ad778",
+        "outputId": "bd110461-9f9b-4974-e15d-f81dda38d790",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 241
@@ -858,7 +858,7 @@
         "\n",
         "burrito_train.head()"
       ],
-      "execution_count": 47,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1110,7 +1110,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 17
         }
       ]
     },
@@ -1129,7 +1129,7 @@
       "metadata": {
         "id": "qhxKU6ZxHnAa",
         "colab_type": "code",
-        "outputId": "31505f7f-f402-4bc4-b339-db2ebe6eda07",
+        "outputId": "cb2fadb6-610f-4abb-86e8-b125e2f97cb7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
@@ -1144,7 +1144,7 @@
         "print(burrito_validate.shape)\n",
         "print(burrito_test.shape)"
       ],
-      "execution_count": 48,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -1176,7 +1176,7 @@
       "metadata": {
         "id": "kO6AAq0gIQ5w",
         "colab_type": "code",
-        "outputId": "cb041acc-98f4-4cf5-efbd-c1a22a97cadf",
+        "outputId": "7fefd158-47f1-4279-c81a-c6fcbee4a777",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1189,7 +1189,7 @@
         "else:\n",
         "    print(f\"Obvious Choice: Great\")"
       ],
-      "execution_count": 49,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -1205,7 +1205,7 @@
       "metadata": {
         "id": "ZrMadiFundZ7",
         "colab_type": "code",
-        "outputId": "d61922f0-17ea-4a1e-da9a-bbc6e54e8309",
+        "outputId": "b2319698-6eb4-48a8-9a2a-6d476986aad0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1215,7 +1215,7 @@
         "greatness = burrito['Great'].mean()\n",
         "print(f\"Percentage Greatness: {greatness*100:.2f}%\")"
       ],
-      "execution_count": 50,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1231,7 +1231,7 @@
       "metadata": {
         "id": "RSdAOpQeJ_3b",
         "colab_type": "code",
-        "outputId": "4dd8a7b4-7a32-4c11-a70b-1e66aa64766b",
+        "outputId": "606c08fa-a941-4ada-82b1-f85a40a57eee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
@@ -1257,7 +1257,7 @@
         "\n",
         "print(\"\\n*lower is better\")"
       ],
-      "execution_count": 51,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -1298,7 +1298,7 @@
       "metadata": {
         "id": "FPnSJpF4KClj",
         "colab_type": "code",
-        "outputId": "53816a07-6ba1-4529-d2a4-8a99ceffe9d3",
+        "outputId": "09fd8aa4-b542-4718-c26b-3d9c3d75c3f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -1324,7 +1324,7 @@
         "\n",
         "burrito_train.head()"
       ],
-      "execution_count": 52,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1388,7 +1388,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 52
+          "execution_count": 22
         }
       ]
     },
@@ -1407,7 +1407,7 @@
       "metadata": {
         "id": "eJ5JlnqUeSNP",
         "colab_type": "code",
-        "outputId": "d6cc027d-280f-4873-de1f-57a415b6f0dc",
+        "outputId": "b7214088-cf51-41e7-ebef-c071cd792d8a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -1422,7 +1422,7 @@
         "burrito_test = encoder.transform(burrito_test)\n",
         "burrito_train.head()"
       ],
-      "execution_count": 53,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1512,7 +1512,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 53
+          "execution_count": 23
         }
       ]
     },
@@ -1531,7 +1531,7 @@
       "metadata": {
         "id": "UiR3qazdjc0-",
         "colab_type": "code",
-        "outputId": "0e4223e9-1920-4719-ebe5-f4f487d54931",
+        "outputId": "a462e570-e747-4ab5-8b0b-006a29a051d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
@@ -1546,7 +1546,7 @@
         "print(burrito_validate.shape)\n",
         "print(burrito_test.shape)"
       ],
-      "execution_count": 54,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -1568,7 +1568,7 @@
       "metadata": {
         "id": "kekg6oGYJ3nS",
         "colab_type": "code",
-        "outputId": "f24f7a04-9e0b-4ed7-d773-f6377f98dffa",
+        "outputId": "b3770d60-605f-475d-e280-066898c5b073",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
@@ -1591,7 +1591,7 @@
         "\n",
         "print(\"\\n*lower is better\")"
       ],
-      "execution_count": 55,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1632,7 +1632,7 @@
       "metadata": {
         "id": "amY3wKZlmUDs",
         "colab_type": "code",
-        "outputId": "df4b0d23-690d-4696-821d-b7bb57f744c0",
+        "outputId": "d7d5dd18-bb2b-47e6-a219-2d36fca4be18",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -1644,7 +1644,7 @@
         "\n",
         "df2.head()"
       ],
-      "execution_count": 56,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1776,7 +1776,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 56
+          "execution_count": 26
         }
       ]
     },
@@ -1785,7 +1785,7 @@
       "metadata": {
         "id": "y5edAkU3mOSf",
         "colab_type": "code",
-        "outputId": "72369845-035e-4c5e-fc5d-0451a6d4c25b",
+        "outputId": "907cc150-1bb3-4ba3-e8e3-d5b38130c168",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -1810,7 +1810,7 @@
         "\n",
         "burrito_train.head()"
       ],
-      "execution_count": 57,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1924,7 +1924,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 57
+          "execution_count": 27
         }
       ]
     },
@@ -1942,7 +1942,7 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "outputId": "3f4f11d4-ed8a-44e1-aa77-6153e1b7de91",
+        "outputId": "bf30b131-89e1-4173-acf0-b67c597f3598",
         "id": "hcPbaXr-uFeQ",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1958,7 +1958,7 @@
         "print(burrito_validate.shape)\n",
         "print(burrito_test.shape)"
       ],
-      "execution_count": 58,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -1989,7 +1989,7 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "outputId": "acdb6b73-bcfc-4d9e-8143-46880a4f3dd5",
+        "outputId": "66e3ef6b-68f5-4a95-8511-0dd0b0c03376",
         "id": "r07xqo9AyDM5",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2003,7 +2003,7 @@
         "else:\n",
         "    print(f\"Obvious Choice: Great\")"
       ],
-      "execution_count": 59,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -2018,7 +2018,7 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "outputId": "1e89e07c-38b6-4951-828b-3c7e3f915d4b",
+        "outputId": "97a78091-5db7-42a3-dc4f-4771cc6fa738",
         "id": "Ts4Uk2F0yDM9",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2029,7 +2029,7 @@
         "greatness = burrito['Great'].mean()\n",
         "print(f\"Percentage Greatness: {greatness*100:.2f}%\")"
       ],
-      "execution_count": 60,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -2055,7 +2055,7 @@
       "metadata": {
         "id": "qrt1_QChoftA",
         "colab_type": "code",
-        "outputId": "87c8754d-bc2c-48a6-a0fa-5992a9ead056",
+        "outputId": "067c3a66-38e0-4315-99f9-c57f24c6fe85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
@@ -2078,7 +2078,7 @@
         "\n",
         "print(\"\\n*lower is better\")"
       ],
-      "execution_count": 61,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -2129,7 +2129,7 @@
       "metadata": {
         "id": "rEoplQZI0q7_",
         "colab_type": "code",
-        "outputId": "a0f41c78-8c3f-4c03-a7ca-7b96062cd287",
+        "outputId": "7169233a-e9f1-4d0c-ec8a-822c5e1fbc08",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -2139,7 +2139,7 @@
         "import altair as alt\n",
         "alt.renderers.enable('colab')"
       ],
-      "execution_count": 62,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2151,7 +2151,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 62
+          "execution_count": 32
         }
       ]
     },
@@ -2173,7 +2173,7 @@
       "metadata": {
         "id": "RKRc7dLZ1Fby",
         "colab_type": "code",
-        "outputId": "31c5045e-5ab0-424c-fbb1-d1a03d462730",
+        "outputId": "e63bbe3d-c164-4428-d847-351e67342cd9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
@@ -2197,7 +2197,7 @@
         "print()\n",
         "burritos_types"
       ],
-      "execution_count": 64,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -2214,10 +2214,10 @@
             ],
             "text/html": [
               "\n",
-              "<div id=\"altair-viz-bac56212629a43fd8291496bb841e9e7\"></div>\n",
+              "<div id=\"altair-viz-ea6a7b68b3414586921bda80ee6a46d7\"></div>\n",
               "<script type=\"text/javascript\">\n",
               "  (function(spec, embedOpt){\n",
-              "    const outputDiv = document.getElementById(\"altair-viz-bac56212629a43fd8291496bb841e9e7\");\n",
+              "    const outputDiv = document.getElementById(\"altair-viz-ea6a7b68b3414586921bda80ee6a46d7\");\n",
               "    const paths = {\n",
               "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
               "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
@@ -2265,7 +2265,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 64
+          "execution_count": 34
         }
       ]
     },
@@ -2297,6 +2297,62 @@
       },
       "source": [
         "Further study could include taking a closer look at the 'Other' category and trying to see if there is more to the story. Are there certain ingredients that give high propability to score one way or another? Would could that mean to a Burrito chef? Also, why do Californians like fries in Burritos?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Tc2MiRRc3wHC",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Random Forest Pipeline\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4yv3WaQG0oFr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.pipeline import make_pipeline\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.preprocessing import StandardScaler"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MaevOvBb3yHY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "78a88981-ce07-47e2-ae58-7bc7f6244a64"
+      },
+      "source": [
+        "pipline = make_pipeline(\n",
+        "    ce.OrdinalEncoder(),\n",
+        "    StandardScaler(),\n",
+        "    RandomForestClassifier(n_jobs=-1, random_state=42)\n",
+        ")\n",
+        "pipline.fit(burrito_train, target_train)\n",
+        "print(f\"Validation: {100*pipline.score(burrito_test, target_test):.2f}%\")"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Validation: 78.12%\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
